--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ hmmlearn>=0.2.6
 librosa>=0.7.0
 scipy>=1.0.0
 scikit-learn>=0.22.0
+structlog>=20.0.0
+matplotlib>=3.0.0
+seaborn>=0.10.0
+sounddevice>=0.3.0
